# JLU_Emshop_System

./: .env.example  .gitignore  ARCHITECTURE_EMSHOP.md  BUG_FIX_REPORT_2025-10-13.md  BUG_FIX_REPORT_4_ISSUES_FINAL_2025-10-14.md  BUG_FIX_REPORT_4_ISSUES_PART2_2025-10-14.md  BUG_FIX_REPORT_4_NEW_ISSUES_2025-10-14.md  BUG_FIX_REPORT_5_ISSUES_2025-10-14.md  BUG_FIX_REPORT_PART2_2025-10-14.md  BUILD_BASELINE_2025-10-13.md  BUSINESS_LOGIC_ENHANCEMENT.md  BUSINESS_LOGIC_IMPLEMENTATION_REPORT.md  CLEANUP_REPORT_2025-10-13.md  CMakeLists.txt  COMPLETION_REPORT_2025-10-13.md  COMPLETION_SUMMARY.md  CONFIG_GUIDE.md  COUPON_JSON_TYPE_FIX_2025-10-13.md  CPP_Interface_Reference.md  DEFENSE_MATERIALS.md  DEPLOYMENT_GUIDE.md  ERROR_CODES.md  FINAL_BUG_FIX_2025-10-14_2025.md  FINAL_SUMMARY_2025-10-13.md  HARDCODED_DATA_FIX_2025-10-14.md  HARDCODED_FIX_SUMMARY_2025-10-14.md  HARDCODED_FIX_TEST_GUIDE_2025-10-14.md  INTEGRATION_TEST_SUCCESS_REPORT.md  LOGGING_GUIDE.md  LOGGING_INTEGRATION_SUMMARY.md  NEXT_STEPS.md  NOTIFICATION_STATUS_SYNC_FIX_2025-10-15.md  PROGRESS_REPORT_2025-10-12.md  PROGRESS_REPORT_2025-10-13.md  PROJECT_GAP_STATUS_2025-10-05.md  PROJECT_STATUS_README.md  PROJECT_SUMMARY.md  QT_CLIENT_UPDATE_REPORT_v1.1.0.md  QT_FULL_FEATURE_UPDATE_REPORT_v1.1.0.md  QUICK_START_2025-10-14.md  (+43 more)
.github/workflows/: build-and-test.yml
archive/: WORK_SUMMARY_2025-10-12.md  WORK_SUMMARY_2025-10-12_AFTERNOON.md
cpp/: ConfigLoader.h  DATABASE_SETUP_README.md  ErrorCodes.h  JNI_BUILD_GUIDE.md  MANUAL_REFACTORING_GUIDE.md  OOP_DESIGN_GUIDE.md  PROJECT_COMPLETION_REPORT.md  QUICK_GUIDE_CartService.md  README_OOP_JNI.md  REFACTORING_PLAN.md  WORK_SUMMARY_2025-10-12_AllServices.md  WORK_SUMMARY_2025-10-12_CartService_Final.md  add_coupon_indexes.sql  add_purchase_limit.sql  add_refunding_status.sql  add_test_data.bat  add_test_data.sql  build_jni.bat  build_linux.sh  build_oop_jni.bat  build_windows.bat  check_purchase_records.sql  coupon_statistics.sql  create_audit_tables.sql  create_notifications_table.sql  create_purchase_limit_procedure.sql  database_upgrade_v1.1.0.sql  emshop_EmshopNativeInterface.h  emshop_database_init.sql  emshop_native_impl.cpp  emshop_native_impl_oop.cpp  expire_coupons_check.sql  fix_all_garbled_products.sql  fix_all_products.bat  fix_all_products.sql  fix_order_service.py  fix_product_names.bat  fix_product_names.sql  init_coupons.sql  init_database.sql  (+17 more)
cpp/archive/: OrderService_temp.txt  README.md  create_order_service.py  emshop_native_impl_oop_backup.cpp  extract_services.py  fix_orderservice_prefix.py  remove_duplicate_includes.py
cpp/archive/docs/: DELETE_RANGE_VISUAL.md  RECOVERY_GUIDE.md
cpp/services/: AddressService.cpp  AddressService.h  CartService.cpp  CartService.h  CouponService.cpp  CouponService.h  OrderService.cpp  OrderService.h  ProductService.cpp  ProductService.h  ReviewService.cpp  ReviewService.h  UserService.cpp  UserService.h
java/: COMPLETE_FEATURE_LIST.md  EmshopCSCore.java  HelloWorld.java  PERMISSION_SYSTEM_TEST_GUIDE.md  TEST_GUIDE.md  cart_quick_test.txt  compile.bat  complete_test_menu.txt  current_available_tests.txt  dependency-reduced-pom.xml  emshop_EmshopNativeInterface.h  fixed_inventory_test.txt  fresh_multi_client_test.txt  inventory_test_commands.txt  multi_client_test.txt  pom.xml  quick_test_commands.txt  run.bat  shopping_cart_test.txt  start_websocket_server.bat  test_commands.txt  test_websocket.bat
java/cpp/: emshop_EmshopNativeInterface.h
java/examples/legacy/: EmshopNettyClient.java  LEGACY_CLIENT.md
java/src/main/java/emshop/: AdminConsole.java  BusinessLogger.java  EmshopCSCore.java  EmshopNativeInterface.java  EmshopNettyClient.java  EmshopNettyServer.java  EmshopServer.java  EmshopValidator.java  EmshopWebSocketServer.java  ErrorCode.java  FixedOOPJNITest.java  JNITest.java  JNITestClient.java  MockDataProvider.java  PermissionService.java  SimpleOOPTest.java  TestFixedOOP.java  TestLoginResponse.java  TraceIdUtil.java  UserConsole.java  WebSocketMessageHandler.java  WebSocketPushService.java  WebSocketTestClient.java
java/src/main/resources/: logback.xml
java/src/test/java/emshop/: EmshopNativeInterfaceTest.java.bak  ErrorCodeTest.java  OrderServiceTest.java  ParseCommandTest.java  SimpleBusinessLogicTest.java  StockManagementTest.java.bak  (+1 more)
java/src/test/resources/: logback-test.xml  test-config.json
qt_client/src/: CMakeLists.txt  CartWidget.cpp  CartWidget.h  ClientAdapter.cpp  ClientAdapter.h  EmshopClient.cpp  EmshopClient.h  EmshopTcpClient.cpp  EmshopTcpClient.h  LoginDialog.cpp  LoginDialog.h  LoginDialogTcp.cpp  MainWindow.cpp  MainWindow.h  OrderWidget.cpp  OrderWidget.h  ProductListWidget.cpp  ProductListWidget.h  build_client.bat  build_tcp_client.bat  main.cpp
qtclient/: CMakeLists.txt  CMakePresets.json  QT_UPDATE_PLAN_v1.1.0.md  SIMPLIFIED_LOGIN_DIALOG.cpp  UI_COMPILATION_SUCCESS.md  UI_COMPILE_FIX.md  UI_MODERNIZATION_README.md
qtclient/scripts/: convert_raw_strings.py
qtclient/src/: CMakeLists.txt  main.cpp
qtclient/src/core/: ApplicationContext.cpp  ApplicationContext.h  UserSession.h
qtclient/src/network/: AsyncRequestManager.cpp  AsyncRequestManager.h  NetworkClient.cpp  NetworkClient.h
qtclient/src/ui/: LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h
qtclient/src/ui/dialogs/: AddressDialog.cpp  AddressDialog.h  PaymentDialog.cpp  PaymentDialog.h
qtclient/src/ui/styles/: modern_style.qss
qtclient/src/ui/tabs/: AdminTab.cpp  AdminTab.h  CartTab.cpp  CartTab.h  CouponsTab.cpp  CouponsTab.h  DashboardTab.cpp  DashboardTab.h  NotificationsTab.cpp  NotificationsTab.h  OrdersTab.cpp  OrdersTab.h  ProductsTab.cpp  ProductsTab.h
qtclient/src/utils/: JsonUtils.cpp  JsonUtils.h  StyleHelper.h
report/: report1 55240425 屈熙宸.docx  report1.doc  report2 55240425 屈熙宸.docx  report3 55240425 屈熙宸.docx  report4 55240425 屈熙宸.docx  report5 55240425 屈熙宸.docx  答辩PPT内容_实际版.md  综合大报告 55240425 屈熙宸.docx
src/: main.cpp  qt_client.cpp  qt_client.h  qt_client.ui  qtclient.cpp  qtclient.h  qtclient.ui
web/: pom.xml
(+2 files in other folders)
